--- a/values.yaml
+++ b/values.yaml
@@ -1,6 +1,6 @@
 jam:
-  clientAddress: "http://example.com"
-  spotifyCallbackURL: "http://example.com/api/v1/auth/callback"
+  clientAddress: "https://example.com"
+  spotifyCallbackURL: "https://example.com/api/v1/auth/callback"
 
 backendImage:
   repository: registry.jole.dev/jamfactory/jamfactory/jamfactory-backend:latest
